[metadata]
name = pvi
description = One line description of your module
url = https://github.com/dls-controls/pvi
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
install_requires =
    apischema
    typing_extensions

[options.packages.find]
where = src

[options.extras_require]
# For creation of PVIs from yaml
cli =
    epicscorelibs
    epicsdbbuilder
    ruamel.yaml
    typer

# For development tests/docs
dev =
    black==19.10b0
    isort>5.0
    pytest-cov
    pytest-mypy
    pytest-flake8
    pytest-black
    flake8-isort
    flake8<4.0.0
    sphinx-rtd-theme-github-versions

[options.package_data]
pvi =
    submodules/*/*/*/*.dbd

[options.entry_points]
# Include a command line script
console_scripts =
    pvi = pvi.__main__:app

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --doctest-glob="*.rst"
    --ignore-glob=*/*/submodules
    --cov=pvi --cov-report term --cov-report xml:cov.xml

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
data_file = /tmp/pvi.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/
